Use launchpad slug in userItems and userData routes
