# backend/api/src/controllers/userData.ts
@@ -1,9 +1,10 @@
 import { Controller, Get, Query, Route } from 'tsoa';
 import { requirePool, getUserItems, getUser } from '@game/db';
 import type { UserDataStats } from '@game/utils';
+import launchpadsData from '@game/utils/src/data';
 
 interface GetUserDataResponse {
-  stats: UserDataStats;
+  stats: UserDataStats | null;
 }
 
 @Route('userData')
@@ -15,8 +16,12 @@ export class UserDataController extends Controller {
   ): Promise<GetUserDataResponse> {
     const pool = requirePool();
     wallet = wallet.toLowerCase();
-    const items = await getUserItems.run({ launchpad, wallet }, pool);
-    const [user] = await getUser.run({ launchpad, wallet }, pool);
+    const launchpadAddress = launchpadsData.find(lpad => lpad.slug === launchpad)?.address;
+    if (!launchpadAddress) {
+      return { stats: null };
+    }
+    const items = await getUserItems.run({ launchpad: launchpadAddress, wallet }, pool);
+    const [user] = await getUser.run({ launchpad: launchpadAddress, wallet }, pool);
     return {
       stats: {
         items,
