# backend/api/src/controllers/userItems.ts
@@ -1,6 +1,7 @@
 import { Controller, Get, Query, Route } from 'tsoa';
 import { requirePool, getUserItems } from '@game/db';
 import type { UserItemsStats } from '@game/utils';
+import launchpadsData from '@game/utils/src/data';
 
 interface GetUserItemsResponse {
   stats: UserItemsStats[];
@@ -15,7 +16,10 @@ export class UserItemsController extends Controller {
   ): Promise<GetUserItemsResponse> {
     const pool = requirePool();
     wallet = wallet.toLowerCase();
-    const stats = await getUserItems.run({ launchpad, wallet }, pool);
+    const launchpadAddress = launchpadsData.find(lpad => lpad.slug === launchpad)?.address;
+    const stats = launchpadAddress
+      ? await getUserItems.run({ launchpad: launchpadAddress, wallet }, pool)
+      : [];
     return { stats };
   }
 }
